# cugpufit

./: README.md  pyproject.toml
cugpufit/: __init__.py  levenberg_marquardt.py  model.py
cugpufit/dampings/: __init__.py  damping.py  fletcher_damping.py  regular_damping.py
cugpufit/fits/: __init__.py  fit.py  gauss_newton_fit.py  levenberg_marquardt_fit.py
cugpufit/losses/: __init__.py  loss.py  mean_squared_error.py  mse.py
cugpufit/models/: model.py
examples/: curve_fitting.py  linear_regression.py
scripts/gadi/: curve_fitting.sh  linear_regression.sh
